# realsense_mavros_bridge

./: CMakeLists.txt  README.md  package.xml
include/realsense_mavros_bridge/: bridge.h
launch/: mavros_realsense.launch  realsense_mavros_bridge.launch  rosbag.launch
src/: bridge.cpp  bridge_ros_node.cpp
